--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
     <title>RUN BUDDY</title>
   </head>
   <body>
-    <h1>RUN BUDDY 🏃</h1>
-    What We Do What You Do Your Trainers Reach Out
+    <!-- navigation -->
+    <header>
+      <h1>RUN BUDDY</h1>
+    </header>
+
+    <!-- hero/jumbotron -->
+    <section></section>
+
+    <!-- What We Do -->
+    <section>
+      <h2>What We Do</h2>
+    </section>
+
+    <!-- What You Do -->
+    <section>
+      <h2>What You Do</h2>
+    </section>
+
+    <!-- Meet The Trainers -->
+    <section>
+      <h2>Meet The Trainers</h2>
+    </section>
+
+    <!-- Our Service Plans -->
+    <section>
+      <h2>Our Service Plans</h2>
+    </section>
+
+    <!-- Reach Out -->
+    <section>
+      <h2>Reach Out</h2>
+    </section>
+
+    <!-- footer -->
+    <footer>
+      <h2>Made with love by Run Buddy</h2>
+    </footer>
   </body>
 </html>
