--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="charset=UTF8" />
+    <meta charset="UTF-8" />
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>RUN BUDDY</title>
@@ -9,7 +9,28 @@
   <body>
     <!-- navigation -->
     <header>
-      <h1>RUN BUDDY</h1>
+      <h1>
+        <a href="/">RUN BUDDY</a>
+      </h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="#what-we-do">What We Do</a>
+          </li>
+          <li>
+            <a href="#what-you-do">What You Do</a>
+          </li>
+          <li>
+            <a href="#your-trainers">Your Trainers</a>
+          </li>
+          <li>
+            <a href="#service-plans">Service Plans</a>
+          </li>
+          <li>
+            <a href="#reach-out">Reach Out</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <!-- hero/jumbotron -->
