added styling in new css file, modified footer text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>RUN BUDDY</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <!-- navigation -->
@@ -63,7 +64,7 @@
 
     <!-- footer -->
     <footer>
-      <h2>Made with love by Run Buddy</h2>
+      <h2>❤️ Made with love by Run Buddy</h2>
     </footer>
   </body>
 </html>
